add clients / vehicles / mechanics classes - controllers - services